tests/snapshots/e2e__trace_push@services-postgres.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/integration.yml  [wf]
    ├─→ actions/checkout  [ext-ac]  @v4
    ╰─→ actions/setup-node  [ext-ac]  @v4
