tests/snapshots/e2e__trace_push@workflow-run-chain.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/trigger.yml  [wf]
