tests/snapshots/e2e__trace_push@zizmor-findings.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/ci.yml  [wf]
    ├─→ actions/checkout  [ext-ac]  @v4
    ╰─→ some-org/some-action  [ext-ac]  @v1
