tests/snapshots/e2e__wiring@dangling-local-uses.snap
---
source: tests/e2e.rs
expression: out
---
wiring  1 finding  (1 dangling-local-uses)

  !  dangling-local-uses
  .github/workflows/ci.yml:10

    `uses: ./.github/actions/typo` references a local action that is not present in the IR
